--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@internationalized/date": "^3.8.2",
+    "@nuxt/ui": "^3.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "nuxt": "^3.17.6",
     "tailwindcss": "^4.1.11",
