--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@internationalized/date": "^3.8.2",
     "@nuxt/ui": "^3.2.0",
     "@tailwindcss/vite": "^4.1.11",
+    "libphonenumber-js": "^1.12.10",
     "nuxt": "^3.17.6",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
